2015-07-14  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: chown of archive dir when restoring an
	  incr.

2015-07-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Start backup event if tape is not ready in
	  CNF_RESERVE == 0;

2015-07-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Add FULL-WAL property.
	* man/xml-source/ampgsql.8.xml: Document FULL-WAL property.

2015-07-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Add 'File shrank by \d* bytes; padding
	  with zeros' as normal message from tar.

2015-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/rait-device.c, device-src/tape-device.c,
	  device-src/vfs-device.c: Typo.

2015-06-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Util.swg: disable setenv_init.

2015-06-23  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-source-device.c (pull_buffer_impl): Call
	  device_read_block with a goot max_block value
	* perl/Amanda/Device.swg (verify_random_from_device): Call
	  device_read_block with a max_block of -1

2015-06-23  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Use g_ascii_strtoull.

2015-06-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Xfer.swg: break potential reference loop

2015-06-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amidxtaped.pl: Temporary fix for protocol bug.

2015-06-19  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Fix if not an application

2015-06-19  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_data.c: Undo patch.
	* recover-src/extract_list.c: Fix compilation

2015-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fix compilation

2015-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/source-file.c: Fix compilation

2015-06-18  Jean-Louis Martineau <martineau@zmanda.com>